# antelope-sdk-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Readme.md  app.cpp  eos_client.cpp  eos_client.h  generate-win-solution.bat  setup.sh
android/: .gitignore  build.gradle
android/com/onikami/antelope/: SingningRequestCallbackManager.java
android/jni/: com_onikami_antelope_SigningRequestCallbackManager.cpp  com_onikami_antelope_SigningRequestCallbackManager.h  com_onikami_antelope_SingningRequestCallbackManager.cpp  com_onikami_antelope_SingningRequestCallbackManager.h
android/src/androidTest/java/com/onikami/antelope/: ExampleInstrumentedTest.java
android/src/main/java/com/onikami/antelope/: SigningRequestCallbackManager.java
android/src/test/java/com/onikami/antelope/: ExampleUnitTest.java
cmake/: abieos.cmake  cryptopp.cmake  nlohman_json.cmake  secp256k1.cmake
cmake/cryptopp/: CMakeLists.txt
cmake/secp256k1/: CMakeLists.txt
examples/axmol/transaction-example/: ,  .axproj.json  CMakeLists.txt
examples/axmol/transaction-example/Source/: MainScene.cpp
examples/axmol/transaction-example/cmake/: antelope-sdk-cpp.cmake
examples/axmol/transaction-example/proj.android/: settings.gradle
examples/cocos-2dx/: create-win32-solution.bat
examples/cocos-2dx/signing-request-example/: CMakeLists.txt
examples/cocos-2dx/signing-request-example/Classes/: AppDelegate.cpp  LoginScene.cpp  LoginScene.h  MainScene.cpp  MainScene.hpp
examples/cocos-2dx/signing-request-example/Resources/fonts/: som-border.fnt
examples/cocos-2dx/signing-request-example/cmake/: antelope-sdk-cpp.cmake
examples/cocos-2dx/signing-request-example/cocos2d/cmake/Modules/: CocosConfigDepend.cmake
examples/cocos-2dx/signing-request-example/proj.android/: settings.gradle
examples/cocos-2dx/signing-request-example/proj.android/gradle/wrapper/: gradle-wrapper.properties
examples/cocos-2dx/signing-request-example/proj.ios_mac/ios/: AppController.mm  Info.plist
examples/cocos-2dx/transaction-example/: .gitignore  CMakeLists.txt
examples/cocos-2dx/transaction-example/Classes/: AppDelegate.cpp  MainScene.cpp  MainScene.hpp
examples/cocos-2dx/transaction-example/Classes/proj.ios_mac/mac/: Info.plist
examples/cocos-2dx/transaction-example/cmake/: antelope-sdk-cpp.cmake
examples/cocos-2dx/transaction-example/proj.android/: gradle.properties  settings.gradle
examples/cocos-2dx/transaction-example/proj.ios_mac/ios/: AppController.mm  Info.plist
include/: eos_client.h
include/eosclient/: Action.hpp  EosioSigningRequest.hpp  Hash.hpp  PermissionLevel.hpp  SigningRequestCallback.hpp  SigningRequestCallbackDelegate.hpp  SigningRequestCallbackManager.hpp  Transaction.hpp  app.h  base58.hpp  eos_client.h  eosclient.h  eosclient.hpp  eosclient_func.h  eosclient_func.hpp  eosclient_lib.h  eosclient_lib.hpp  types.hpp
src/: Action.cpp  EdUrlParser.cpp  EosioSigningRequest.cpp  PermissionLevel.cpp  SigningRequestCallbackManager.cpp  Transaction.cpp  app.cpp  base58.cpp  eos_client.cpp  eosclient.cpp  eosclient_func.cpp  eosclient_lib.cpp  hash.cpp  types.cpp
